# geneSCOPE-idelta-based-gridselect

./: .gitignore  Cargo.toml  Dockerfile  README.md  apptainer.def
config/: widths_anchor_v1.txt  widths_anchor_v2.txt  widths_prescreen_v1.txt  widths_prescreen_v2.txt
integrations/geneSCOPE/: make_molecules_bbox.py  run_idelta_gridselect.sh
src/: lib.rs  main.rs
src/config/: mod.rs
src/idelta/: knee.rs  mod.rs  pipeline.rs  smooth.rs
src/io/: mod.rs  molecules.rs  molecules_bbox.rs  roi.rs  tsv.rs
src/roi/: mod.rs  polygon.rs  raster.rs  tiles.rs
