[package]
name = "idelta-gridselect"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.5.1", features = ["derive"] }
csv = "1.3.0"
flate2 = "1.0.28"
parquet = { version = "51.0.0", default-features = false, features = ["snap", "zstd"] }
rand = { version = "0.8.5", features = ["std", "std_rng"] }
rayon = "1.8.1"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"

[dev-dependencies]
pretty_assertions = "1.4.0"
